# daedalus-mono

./: .gitignore  .gitmodules  README.md  WORKSPACE  package-lock.json  package.json  pants.toml  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: build-maze-runner.yml  create-readme.yml  main.yml  sync-go-packages.yml  update-readme.yml
.turbo/cache/: 08e48966eb469139-meta.json  0911f56daf99f534-meta.json  0911f56daf99f534.tar.zst  100500855d3011ad-meta.json  100500855d3011ad.tar.zst  1f5c8e687302504f-meta.json  1f5c8e687302504f.tar.zst  2118566adf23274f-meta.json  2118566adf23274f.tar.zst  29712a0be22497dc-meta.json  29712a0be22497dc.tar.zst  3b09c516623b4e9a-meta.json  3b09c516623b4e9a.tar.zst  466e3f44643f2c04-meta.json  701cd8cd19158919-meta.json  701cd8cd19158919.tar.zst  7bac5c93273ea959-meta.json  7bac5c93273ea959.tar.zst  9b7d7f2e4bb9ed35-meta.json  9b7d7f2e4bb9ed35.tar.zst  cacaf5a81e9e1c04-meta.json  db6eb71400d872c4-meta.json  db6eb71400d872c4.tar.zst  (+3 more)
apps/flask/maze-runner/: main.py  package.json  pyproject.toml  requirements.txt  setup.py
apps/flask/maze-runner/flask_app/: main.py
apps/flask/maze-runner/modules/: maze.py  node.py  runner.py
boilerplate-md/: README.md
libs/maze-runner/: pyproject.toml
libs/maze-runner/maze_runner/: maze.py  node.py  quick_solver.py  runner.py  solver.py
libs/python/anki-tools/: .gitignore  README.md  package.json  pyproject.toml
libs/python/anki-tools/anki_tools/: build_deck.py  current.txt  get_deck_info.py
libs/python/neural-networks/abstract-base-classes/: README.md  package.json  pyproject.toml
libs/python/neural-networks/abstract-base-classes/src/nodes/: basic.py
libs/python/neural-networks/abstract-base-classes/src/shells/: ANN.py  MLP.py  MLP_vanilla.py
(+302 files in other folders)
