[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "maze-runner"
version = "0.1.0"
description = ""
authors = ["icarus64 <ellishogan95@gmail.com>"]
readme = "README.md"
packages = [
  { include = "maze_runner" }
]

[tool.poetry.dependencies]
python = "^3.8"

